# mit-stuff

./: .gitignore  README.md  dc-stepper.py  requirements.txt
cn/: dvr.py  subnet.py
cn/rip/: rip.pkt
cn/socket-stuff/: CMakeLists.txt
daa/: n_queen.py  quicksort.py  sorting.py
dbms/: ass4.txt  company.sql  dbms-q&a.txt  dbms-q.txt  ddl.txt  plsql.txt
dwdm/: MiniProject.py  apriori.py  basic.py  decision_tree.py  kmeans.py  kmeans_pkg.py  ksdfg_data_cube.cub  olapcube.txt  project.ipynb  titanic_binning.py  titaninc.ipynb
hpc/: bubble  bubble.c  hello
hpc/ass4/: add  add.c  input1.txt  input2.txt  output.txt  vector.c
iot/: mqtt-cmd-text.txt  myPublisher.py  mySubscriber.py  pir.py
iot/project/: main.py  requirements.txt
is/: main.py  pgp_instructions.md  playfair.py  rsa.py  rsa_crypto.py  shuffle.py
smd/: Activity Diagram e4.zargo  OBJect diagram online registration.zargo  class diagram online registration.zargo  class diagram online registration.zargo~  online registration system.zargo  online registration system.zargo~
t10/dfcl/: pyproject.toml
t10/dfcl/assignment-2/: mail-headers.py
t11/TOE/: pyproject.toml
t11/dfcl/: pyproject.toml
t12/sadp/: pyproject.toml
t12/sadp/assignment3/: __init__.py  __main__.py  bakery.py  bakery_proxy.py  product_factory.py
t12/sadp/assignment3/bakery/: __init__.py  bakery.py  bakery_outlet.py
t12/sadp/assignment3/products/: __init__.py  buorbon_biscuits.py  butterscotch_cake.py  coffee_cake.py  elaichi_biscuits.py  multigrain_bread.py  pita_bread.py  product.py  truffle_cake.py  whole_wheat_bread.py  wholegrain_biscuits.py
t12/tfe/: pyproject.toml
t12/tfe/assignment1/: __init__.py  test_selenium.py
t12/tfe/flask_assignment/: __init__.py
t12/tfe/flask_assignment/models/: __init__.py  marks.py  student.py
t12/tfe/flask_assignment/routes/: __init__.py  marks.py  student.py
t12/tfe/flask_assignment/static/css/: base.css
t12/tfe/flask_assignment/templates/: base.html  marks.html
t12/tfe/selenium_assignment/: README.md  __main__.py
t12/tfe/tensorflow_assignment/: notebook93a209c777.ipynb
t12/tfe/tinkercad_assignment/: Mighty Duup-Gaaris.brd
t12/tfe/wireshark_assignment/: logs.csv
t12/toe/: pyproject.toml
t8/daa/: n_queen.py  quicksort.py
t8/dwdm/: MiniProject.py  apriori.py  dataframe.py  decision_tree.py  kmeans.py  kmeans_pkg.py  ksdfg_data_cube.cubeproject  titanic_train.csv  titanic_transformation.py  titaninc.ipynb
t8/hpc/: hello.c
t8/is/: main.py  rsa_crypto.py
t9/ai/: a_star.py  expert_system.pl  send_more_money.py  tictactoe.py
t9/python/: PP1_PB31.md  PP2_PB31.md
t9/seminar/: WPU_Seminar_Synopsis_Anexure-II.doc
t9/ssc/: basics.java
tri7/cn/: subnet.py
tri7/dbms/: Assignment  4[227].doc  (+7 more)
wt/: Ara-Ara.html  Recommendations.html  Top_Airing.html  formValid.html
(+50 files in other folders)
