[tool.black]
skip-string-normalization = true
line-length = 120

[tool.poetry]
name = "dfcl"
version = "0.1.0"
description = "DFCL pracs"
authors = ["ksdfg <ksdfg123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
andriller = "^3.5.2"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
