[tool.poetry]
name = "Tools For Engineers"
version = "0.1.0"
description = "Practicals for Tools For Engineers"
authors = ["ksdfg <ksdfg123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
